task: bug na inicialização resolvido